# --tutorial_django-channels_websocket_chat

./: Makefile  Readme.md  docker-compose.yml  pyproject.toml
config/chat/: consumers.py
config/config/: asgi.py  settings.py
websocket_chat/: Dockerfile  entrypoint.sh  pyproject.toml
websocket_chat/chat/: consumers.py
websocket_chat/config/: asgi.py  settings.py
